@@ -1,9 +1,4 @@
-include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/lib)
-
 set(tests
-    runvoigt
-    runfwhm
-    run_w_of_z
     test1
     )
 
@@ -12,8 +7,10 @@ foreach(test ${tests})
         set_property(SOURCE ${test}.c PROPERTY LANGUAGE CXX)
     endif()
     add_executable(${test} ${test}.c)
+    target_include_directories(${test} PRIVATE ${CMAKE_SOURCE_DIR}/lib)
     if (${CERF_CPP})
         set_property(TARGET ${test} PROPERTY LINKER_LANGUAGE CXX)
     endif()
     target_link_libraries(${test} ${cerf_LIBRARY})
+    add_test(${test} ${CMAKE_CURRENT_BINARY_DIR}/${test})
 endforeach()
