@@ -4,6 +4,7 @@ libcerf-1.10, released ?18:
   - Implement new function voigt_hwhm
   - Restore libcerf.pc
   - Add INSTALL instructions, and other minor adjustments for use of libcerf in C++ projects
+  - Support 'ctest', which runs the numeric accuracy tests from test1.c.
   - Rename type cmplx into _cerf_cmplx to avoid name clash with Gnuplot pre 5.3
 
 libcerf-1.8 [2oct18] and libcerf-1.9 [16oct18]
